--- a/app/src/main/res/layout/add_dialog.xml
+++ b/app/src/main/res/layout/add_dialog.xml
@@ -74,7 +74,7 @@
             android:layout_height="40dp">
 
             <TextView
-                android:id="@+id/labelHeureDepart"
+                android:id="@+id/labelEmailOffre"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
