--- a/app/src/main/res/layout/list_detail.xml
+++ b/app/src/main/res/layout/list_detail.xml
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/labelHeureDepart"
+                android:id="@+id/labelEmailOffre"
                 android:layout_width="177dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
@@ -84,7 +84,7 @@
                 android:id="@+id/heureDepart"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:layout_below="@+id/labelHeureDepart"
+                android:layout_below="@+id/labelEmailOffre"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center|left"
