--- a/app/src/main/res/layout/activity_requested.xml
+++ b/app/src/main/res/layout/activity_requested.xml
@@ -2,15 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bac"
+    android:id="@+id/bac2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NotificationActivity"
     android:background="@drawable/_6390692_r_sum__flou_fond_d_grad__avec_la_tendance_pastel_rose_pourpre_violet_jaune_et_bleu_pour_les_concepts_daigne_">
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textTitleListOfRequest"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
         android:layout_marginTop="32dp"
@@ -21,14 +20,14 @@
         android:textColor="@color/black"
         android:textSize="30sp"
         android:typeface="sans"
-        app:layout_constraintEnd_toEndOf="@id/listDataOffre"
+        app:layout_constraintEnd_toEndOf="@id/listDataRequest"
         app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <ListView
-        android:id="@+id/listDataOffre"
+        android:id="@+id/listDataRequest"
         android:layout_width="391dp"
         android:layout_height="636dp"
         app:layout_constraintEnd_toEndOf="parent"
