--- a/app/src/main/res/layout/activity_requested.xml
+++ b/app/src/main/res/layout/activity_requested.xml
@@ -5,36 +5,47 @@
     android:id="@+id/bac2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/_6390692_r_sum__flou_fond_d_grad__avec_la_tendance_pastel_rose_pourpre_violet_jaune_et_bleu_pour_les_concepts_daigne_">
+    android:background="@drawable/capture5">
 
 
     <TextView
         android:id="@+id/textTitleListOfRequest"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/aladin"
-        android:text="@string/list_of_requests"
+        android:text="request sent"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="@id/listDataRequest"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.026"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <ListView
         android:id="@+id/listDataRequest"
-        android:layout_width="391dp"
-        android:layout_height="636dp"
+        android:layout_width="375dp"
+        android:layout_height="626dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.36"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:fastScrollAlwaysVisible="true" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="87dp"
+        android:layout_height="81dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/listDataRequest"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/concept_location_voiture_moderne_service_autopartage_dans_n_importe_quelle_ville_gens_utilisent_application_mobile_telephone_187411_122_removebg_preview" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
