--- a/app/src/main/res/layout/list_request.xml
+++ b/app/src/main/res/layout/list_request.xml
@@ -5,15 +5,15 @@
     android:id="@+id/bac"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NotificationActivity"
-    android:background="@drawable/_6390692_r_sum__flou_fond_d_grad__avec_la_tendance_pastel_rose_pourpre_violet_jaune_et_bleu_pour_les_concepts_daigne_">
+    android:background="@drawable/capture6"
+    tools:context=".NotificationActivity">
 
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/aladin"
         android:text="@string/list_of_requests"
         android:textAllCaps="false"
@@ -22,20 +22,32 @@
         android:textSize="30sp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="@id/listDataOffre"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <ListView
         android:id="@+id/listDataOffre"
-        android:layout_width="391dp"
-        android:layout_height="636dp"
+        android:layout_width="369dp"
+        android:layout_height="610dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:fastScrollAlwaysVisible="true" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="117dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/concept_location_voiture_moderne_service_autopartage_dans_n_importe_quelle_ville_gens_utilisent_application_mobile_telephone_187411_122_removebg_preview" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
