--- a/app/src/main/res/layout/sgin_up_activity.xml
+++ b/app/src/main/res/layout/sgin_up_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/capture3"
-    tools:context=".MainActivityLogout">
+    tools:context=".SignUpActivity">
 
     <EditText
         android:id="@+id/email"
