--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -25,7 +25,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
-                android:text="Departure city:"
+                android:text="Departure address:"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
-                android:text="Destination city:"
+                android:text="Destination address:"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
