--- a/app/src/main/res/layout/sign_up_activity.xml
+++ b/app/src/main/res/layout/sign_up_activity.xml
@@ -34,9 +34,9 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="2dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="text"
+        android:selectAllOnFocus="true"
         android:text="Full Name"
-        android:textColorHighlight="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
